Clean up visitor helper and garden